name:            wai-handler-webkit
version:         0.2.0.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Turn WAI applications into standalone GUIs using QtWebkit.
description:     Runs any WAI application using
                 the simpleserver handler and then pops up a Webkit browser
                 to view it.
category:        Web
stability:       unstable
cabal-version:   >= 1.2
build-type:      Simple
homepage:        http://github.com/snoyberg/hack-handler-webkit/tree/master

library
    build-depends:     base >= 4 && < 5,
                       wai >= 0.3 && < 0.4,
                       warp >= 0.3 && < 0.4
    ghc-options:       -Wall -threaded
    exposed-modules:   Network.Wai.Handler.Webkit
    c-sources:         webkit.cpp
    if os(windows)
        include-dirs:    c:\qt\2010.05\qt\include\qtgui
                         c:\qt\2010.05\qt\include\qtwebkit
                         c:\qt\2010.05\qt\include
        extra-libraries: QtWebKit4 QtGui4 QtNetwork4 QtCore4 stdc++
        extra-lib-dirs:  c:\qt\2010.05\qt\lib
    else
        pkgconfig-depends: QtWebKit
